# service/swagger_output.json
@@ -66,6 +66,29 @@
           }
         }
       }
+    },
+    "/systemparam": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "byte_reference",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -79,24 +102,6 @@
         "properties": {
           "type": "object",
           "properties": {
-            "quantity": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "number"
-                }
-              }
-            },
-            "price": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "number"
-                }
-              }
-            },
             "cart_id": {
               "type": "object",
               "properties": {
@@ -114,6 +119,24 @@
                   "example": "string"
                 }
               }
+            },
+            "quantity": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "number"
+                }
+              }
+            },
+            "price": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "number"
+                }
+              }
             }
           }
         }
@@ -129,19 +152,6 @@
         "properties": {
           "type": "object",
           "properties": {
-            "card_date": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "format": {
-                  "type": "string",
-                  "example": "date"
-                }
-              }
-            },
             "cart_id": {
               "type": "object",
               "properties": {
@@ -157,6 +167,19 @@
                 "type": {
                   "type": "string",
                   "example": "string"
+                }
+              }
+            },
+            "card_date": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "format": {
+                  "type": "string",
+                  "example": "date"
                 }
               }
             }
@@ -206,19 +229,6 @@
         "properties": {
           "type": "object",
           "properties": {
-            "created_at": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "format": {
-                  "type": "string",
-                  "example": "date-time"
-                }
-              }
-            },
             "id": {
               "type": "object",
               "properties": {
@@ -254,6 +264,19 @@
                   "example": "string"
                 }
               }
+            },
+            "created_at": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "format": {
+                  "type": "string",
+                  "example": "date-time"
+                }
+              }
             }
           }
         }
@@ -269,12 +292,12 @@
         "properties": {
           "type": "object",
           "properties": {
-            "product_price": {
+            "product_id": {
               "type": "object",
               "properties": {
                 "type": {
                   "type": "string",
-                  "example": "number"
+                  "example": "string"
                 }
               }
             },
@@ -296,12 +319,21 @@
                 }
               }
             },
-            "product_id": {
+            "product_detail": {
               "type": "object",
               "properties": {
                 "type": {
                   "type": "string",
                   "example": "string"
+                }
+              }
+            },
+            "product_price": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "number"
                 }
               }
             },
@@ -315,15 +347,6 @@
               }
             },
             "product_type": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "product_detail": {
               "type": "object",
               "properties": {
                 "type": {
@@ -356,6 +379,65 @@
               }
             },
             "brand_name": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "system_param": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string",
+          "example": "object"
+        },
+        "properties": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            },
+            "byte_reference": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            },
+            "byte_type": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            },
+            "byte_name": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            },
+            "byte_code": {
               "type": "object",
               "properties": {
                 "type": {
